--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ android:
   - extra-android-m2repository
 jdk:
 - oraclejdk8
+before_install:
+  - mkdir "$ANDROID_SDK/licenses" || true
+  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_SDK/licenses/android-sdk-license"
