Update Travis CI configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,28 @@
 language: android
+jdk:
+- oraclejdk8
 android:
   components:
-  - tools
   - platform-tools
+  - tools
   - build-tools-24.0.2
   - android-24
   - extra-google-google_play_services
-  - extra-google-m2repository
   - extra-android-m2repository
-jdk:
-- oraclejdk8
+  - extra-google-m2repository
+  licenses:
+  - '.+'
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+  directories:
+    - $HOME/.m2
+    - $HOME/.gradle
+
 before_install:
-  - mkdir "$ANDROID_SDK/licenses" || true
-  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_SDK/licenses/android-sdk-license"
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
