--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ jdk:
 - oraclejdk8
 android:
   components:
-  - platform-tools
   - tools
+  - tools
+  - platform-tools
   - build-tools-24.0.3
   - android-24
   - extra-google-google_play_services
